--- a/.drone.yml
+++ b/.drone.yml
@@ -14,23 +14,25 @@ steps:
     event:
     - tag
 
-- name: release
+- name: publish
   commands:
-  - docker run  --pull always --rm
-      -e DRONE_BUILD_EVENT=tag
-      -e DRONE_REPO_OWNER="$DRONE_REPO_OWNER"
-      -e DRONE_REPO_NAME="$DRONE_REPO_NAME"
-      -e PLUGIN_API_KEY="$API_KEY"
-      -e PLUGIN_BASE_URL="https://api.github.com/"
-      -e PLUGIN_UPLOAD_URL="https://uploads.github.com/"
-      -e DRONE_COMMIT_REF="refs/tags/$DRONE_TAG"
-      -e PLUGIN_OVERWRITE="true"
-      -e PLUGIN_FILES="build/*"
-      -v $(pwd):$(pwd)
-      -w $(pwd)
-      docker.io/plugins/github-release
+  - mkdir -p $HOMEPATH/.docker; echo $IMAGE_PULL_SECRETS > $HOMEPATH/.docker/config.json
+  - docker run --rm
+    --env OSS_ENDPOINT=$OSS_ENDPOINT
+    --env OSS_ACCESS_KEY_ID=$OSS_ACCESS_KEY_ID
+    --env OSS_ACCESS_KEY_SECRET=$OSS_ACCESS_KEY_SECRET
+    -v $PWD:/workspace
+    grunt
+    python3 _scripts/storage.py build
   environment:
-    API_KEY:
-      from_secret: github_token
+    OSS_ENDPOINT:
+      from_secret: oss_endpoint
+    OSS_ACCESS_KEY_ID:
+      from_secret: oss_access_key_id
+    OSS_ACCESS_KEY_SECRET:
+      from_secret: oss_access_key_secret
+    IMAGE_PULL_SECRETS:
+      from_secret: container_pull_secrets
   when:
-    event: tag
+    event:
+    - tag
