chore(bulecss): upgrade codename to bookworm

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,5 +1,5 @@
 
-FROM registry.drycc.cc/drycc/base:bullseye as build-app
+FROM registry.drycc.cc/drycc/base:bookworm as build-app
 
 ENV NODE_VERSION="16.14.2"
 
